Make pathing more robust